--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
   },
   "devDependencies": {
     "@types/pluralize": "^0.0.29",
+    "cz-conventional-changelog": "3.0.2",
     "graphql": "^14.5.8",
     "nodemon": "^1.19.4",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
