--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "nodemon",
     "prestart": "docker-compose up -d",
-    "postinstall": "cp .env.example .env"
+    "postinstall": "cp .env.example .env",
+    "test": "jest"
   },
   "dependencies": {
     "apollo-server": "^2.9.7",
@@ -17,10 +18,14 @@
     "typeorm": "^0.2.20"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.23",
     "@types/pluralize": "^0.0.29",
     "cz-conventional-changelog": "3.0.2",
     "graphql": "^14.5.8",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.4",
+    "sqlite3": "^4.1.0",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.4.1",
     "typescript": "^3.7.2"
   },
