--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "apollo-server": "^2.9.7",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.14.0",
     "pluralize": "^8.0.0",
     "reflect-metadata": "^0.1.13",
@@ -18,7 +20,9 @@
     "typeorm": "^0.2.20"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^24.0.23",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/pluralize": "^0.0.29",
     "cz-conventional-changelog": "3.0.2",
     "graphql": "^14.5.8",
