--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^24.0.23",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/pluralize": "^0.0.29",
+    "codecov": "^3.6.1",
     "cz-conventional-changelog": "3.0.2",
     "graphql": "^14.5.8",
     "jest": "^24.9.0",
