--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.14.0",
     "pluralize": "^8.0.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/faker": "^4.1.8",
     "@types/jest": "^24.0.23",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/pluralize": "^0.0.29",
